--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -79,8 +79,10 @@ jobs:
       run: terraform init
 
     # Checks that all Terraform configuration files adhere to a canonical format
-    - name: Terraform Format
-      run: terraform fmt -check
+    # - name: Terraform Format
+    #   run: terraform fmt -check
+    #   env:
+    #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
