--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -64,6 +64,8 @@ jobs:
         shell: bash
 
     steps:
+
+    
     # Checkout the repository to the GitHub Actions runner
     - name: Checkout
       uses: actions/checkout@v3
@@ -78,6 +80,11 @@ jobs:
     - name: Terraform Init
       run: terraform init
 
+    - name: Add profile credentials to ~/.aws/credentials
+      run: |
+        aws configure set aws_access_key_id ${{ secrets.YOUR_ACCESS_KEY }} --profile test-1
+        aws configure set aws_secret_access_key ${{ secrets.YOUR_SECRET_ACCESS_KEY }} --profile test-1
+        
     # Checks that all Terraform configuration files adhere to a canonical format
     # - name: Terraform Format
     #   run: terraform fmt -check
