--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -79,12 +79,17 @@ jobs:
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       run: terraform init
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TF_ACTION_WORKING_DIR: 'terraform'
+          AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-    - name: Add profile credentials to ~/.aws/credentials
-      run: |
-        aws configure set aws_access_key_id ${{ secrets.YOUR_ACCESS_KEY }} --profile test-1
-        aws configure set aws_secret_access_key ${{ secrets.YOUR_SECRET_ACCESS_KEY }} --profile test-1
-        
+    # - name: Add profile credentials to ~/.aws/credentials
+    #   run: |
+    #     aws configure set aws_access_key_id ${{ secrets.YOUR_ACCESS_KEY }} --profile test-1
+    #     aws configure set aws_secret_access_key ${{ secrets.YOUR_SECRET_ACCESS_KEY }} --profile test-1
+
     # Checks that all Terraform configuration files adhere to a canonical format
     # - name: Terraform Format
     #   run: terraform fmt -check
