--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -86,16 +86,12 @@ jobs:
           AWS_ACCESS_KEY_ID:  ${{secrets.AWS_ACCESS_KEY_ID}}
           AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY}}
 
-    # - name: Add profile credentials to ~/.aws/credentials
-    #   run: |
-    #     aws configure set aws_access_key_id ${{ secrets.YOUR_ACCESS_KEY }} --profile test-1
-    #     aws configure set aws_secret_access_key ${{ secrets.YOUR_SECRET_ACCESS_KEY }} --profile test-1
-
+  
     # Checks that all Terraform configuration files adhere to a canonical format
-    # - name: Terraform Format
-    #   run: terraform fmt -check
-    #   env:
-    #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Terraform Format
+      run: terraform fmt -check
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
